@@ -107,15 +107,19 @@ def listen(docs, quiet):
     from veusz.veusz_listen import openWindow
     openWindow(docs, quiet=quiet)
 
-def export(exports, docs):
+def export(exports, docs, options):
     '''A shortcut to load a set of files and export them.'''
     from veusz import document
     from veusz import utils
+
+    # TODO: validate options
+    opttxt = ', '.join(options) if options else ''
+
     for expfn, vsz in czip(exports, docs):
         doc = document.Document()
         ci = document.CommandInterpreter(doc)
         ci.Load(vsz)
-        ci.run('Export(%s)' % repr(expfn))
+        ci.run('Export(%s, %s)' % (repr(expfn), opttxt))
 
 def convertArgsUnicode(args):
     '''Convert set of arguments to unicode (for Python 2).
@@ -178,6 +182,9 @@ class VeuszApp(qt.QApplication):
             '--export', action='append', metavar='FILE',
             help='export the next document to this'
             ' output image file, exiting when finished')
+        parser.add_argument(
+            '--export-option', action='append', metavar='VAL',
+            help='add option when exporting file')
         parser.add_argument(
             '--embed-remote',
             action='store_true',
@@ -311,7 +318,7 @@ class VeuszApp(qt.QApplication):
             # listen to incoming commands
             listen(args.docs, quiet=args.quiet)
         elif args.export:
-            export(args.export, args.docs)
+            export(args.export, args.docs, args.export_option)
             self.quit()
             sys.exit(0)
         else:
