@@ -1,3 +1,6 @@
+Changes in *next version*:
+ * Add --export-option parameter for command line exporting control
+
 Changes in 2.2.2:
  * Fix zoom for polar, ternary and broken axis plots
  * For mean and add dataset operations, allow datasets to be different
